--- a/src/components/details/home.less
+++ b/src/components/details/home.less
@@ -5,6 +5,10 @@ body{
   color: #333;
 }
 
+a{
+  color: #333;
+}
+
 .home_wrap{
   width: 100%;
 }
@@ -20,26 +24,26 @@ body{
   margin-top: 18/@rem;
 }
 
-.home_wrap_item h3{
+.home_wrap_item .time{
   font-size: 28/@rem;
 }
 
 /* 待接单 */
-.home_wrap_item h3 span.waiting {
+.home_wrap_item .time span.waiting {
   float: right;
   font-size: 30/@rem;
   color: #29aa90;
 }
 
 /* 已派单 */
-.home_wrap_item h3 span.complete {
+.home_wrap_item .time span.complete {
   float: right;
   font-size: 30/@rem;
   color: #ffb414;
 }
 
 /* 已接单 */
-.home_wrap_item h3 span.already {
+.home_wrap_item .time span.already {
   float: right;
   font-size: 30/@rem;
   color: #00a0e9;
