--- a/src/components/details/orders.css
+++ b/src/components/details/orders.css
@@ -6,17 +6,17 @@
   background: #fff;
   margin-top: 0.18rem;
 }
-.orders_wrap_item h3 {
+.orders_wrap_item .time {
   font-size: 0.28rem;
 }
 /* 已取消，平台已取消 */
-.orders_wrap_item h3 span.cancel {
+.orders_wrap_item .time span.cancel {
   float: right;
   font-size: 0.34rem;
   color: #f05a49;
 }
 /* 已完成 */
-.orders_wrap_item h3 span.succeed {
+.orders_wrap_item .time span.succeed {
   float: right;
   font-size: 0.34rem;
   color: #00a0e9;
