--- a/src/components/details/orders.less
+++ b/src/components/details/orders.less
@@ -10,19 +10,19 @@
   margin-top: 18/@rem;
 }
 
-.orders_wrap_item h3{
+.orders_wrap_item .time{
   font-size: 28/@rem;
 }
 
 /* 已取消，平台已取消 */
-.orders_wrap_item h3 span.cancel{
+.orders_wrap_item .time span.cancel{
   float: right;
   font-size: 34/@rem;
   color: #f05a49;
 }
 
 /* 已完成 */
-.orders_wrap_item h3 span.succeed{
+.orders_wrap_item .time span.succeed{
   float: right;
   font-size: 34/@rem;
   color: #00a0e9;
