--- a/src/components/details/records.less
+++ b/src/components/details/records.less
@@ -2,6 +2,7 @@
 
 .records_wrap{
   width: 100%;
+  background: #fff;
 }
 
 .records_wrap_top{
@@ -21,7 +22,7 @@
   font-size: 36/@rem;
   color: #fff;
   position: absolute;
-  top: 20/@rem;
+  top: 50/@rem;
   left: 50%;
   transform: translateX(-50%);
 }
