--- a/src/components/details/details.less
+++ b/src/components/details/details.less
@@ -6,33 +6,33 @@
   border-bottom: 1/@rem #ddd solid;
 }
 
-.details_wrap_item h3{
+.details_wrap_item .time{
   font-size: 32/@rem;
 }
 
 /* 平台已取消，已取消 */
-.details_wrap_item h3 span.cancel{
+.details_wrap_item .time span.cancel{
   float: right;
   font-size: 34/@rem;
   color: #f05a49;
 }
 
 /* 已完成，已接单 */
-.details_wrap_item h3 span.succeed{
+.details_wrap_item .time span.succeed{
   float: right;
   font-size: 34/@rem;
   color: #00a0e9;
 }
 
 /* 待接单 */
-.details_wrap_item h3 span.waiting {
+.details_wrap_item .time span.waiting {
   float: right;
   font-size: 34/@rem;
   color: #29ab91;
 }
 
 /* 已派单 */
-.details_wrap_item h3 span.complete {
+.details_wrap_item .time span.complete {
   float: right;
   font-size: 34/@rem;
   color: #ffb414;
@@ -41,7 +41,7 @@
 .details_wrap_item .date{
   font-size: 24/@rem;
   color: #888;
-  margin-top: 20/@rem;
+  margin-top: 10/@rem;
 }
 
 .details_wrap_item .content{
@@ -310,7 +310,7 @@ label {
 .details_shadow_code{
   width: 100%;
   height: 670/@rem;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   background: #fff;
 }
@@ -355,7 +355,7 @@ label {
   margin-top: 60/@rem;
 }
 
-.details_shadow_evaluation .pic{
+.details_shadow_evaluation .evaStar{
   width: 410/@rem;
   overflow: hidden;
   position: absolute;
@@ -364,15 +364,34 @@ label {
   transform: translateX(-50%);
 }
 
-.details_shadow_evaluation .icon_star{
-  float: left;
+.details_shadow_evaluation .evaStar .star{
+  font-size: 0;
+  width: 410/@rem;
+}
+
+.details_shadow_evaluation .evaStar .star .star-item{
+  display: inline-block;
+  background-repeat: no-repeat;
   margin-left: 30/@rem;
   width: 56/@rem;
   height: 56/@rem;
+  background-size: 100%;
 }
 
-.details_shadow_evaluation .icon_star:first-child{
+.details_shadow_evaluation .evaStar .star .star-item:first-child{
   margin-left: 0;
+}
+ 
+.details_shadow_evaluation .evaStar .star .star-item.star-item.on{
+  background-image: url(../../assets/icon_star.png);
+}
+ 
+.details_shadow_evaluation .evaStar .star .star-item.star-item.half{
+  background-image: url(../../assets/icon_star.png);
+}
+ 
+.details_shadow_evaluation .evaStar .star .star-item.star-item.off{
+  background-image: url(../../assets/icon_star_hover.png);
 }
 
 .details_shadow_evaluation .text{
@@ -402,3 +421,4 @@ label {
   color: #00a0e9;
   border-top: 1/@rem #ddd solid;
 }
+
