--- a/src/components/details/details.less
+++ b/src/components/details/details.less
@@ -98,7 +98,6 @@
 .details_wrap_reason{
   overflow: hidden;
   padding: 30/@rem;
-  padding-bottom: 0;
   background: #fff;
   margin-top: 20/@rem;
 }
@@ -106,7 +105,6 @@
 .details_wrap_reason .why{
   position: relative;
   font-size: 34/@rem;
-  line-height: 0;
 }
 
 .details_wrap_reason .why .btn_view{
@@ -131,11 +129,13 @@
   word-wrap: break-word;
   word-break: break-all;
   overflow: hidden;
+  margin-top: 10/@rem;
 }
 
 .details_wrap_reason .tel{
   font-size: 30/@rem;
   padding-left: 10/@rem;
+  margin-top: 10/@rem;
 }
 
 .details_wrap_reason .tel .icon_tel{
