--- a/src/components/details/orders.less
+++ b/src/components/details/orders.less
@@ -14,11 +14,32 @@
   font-size: 28/@rem;
 }
 
-/* 已取消，平台已取消 */
+/* 已取消 */
 .orders_wrap_item .time span.cancel{
   float: right;
   font-size: 34/@rem;
   color: #f05a49;
+}
+
+/* 待接单 */
+.orders_wrap_item .time span.waiting {
+  float: right;
+  font-size: 34/@rem;
+  color: #29aa90;
+}
+
+/* 已派单 */
+.orders_wrap_item .time span.complete {
+  float: right;
+  font-size: 34/@rem;
+  color: #ffb414;
+}
+
+/* 已接单 */
+.orders_wrap_item .time span.already {
+  float: right;
+  font-size: 34/@rem;
+  color: #00a0e9;
 }
 
 /* 已完成 */
@@ -55,7 +76,7 @@
 }
 
 .orders_wrap_text {
-  width: 400/@rem;
+  width: 330/@rem;
   margin: 50/@rem auto 0;
   font-size: 28/@rem;
   color: #888;
