--- a/src/components/create/common/addressel.less
+++ b/src/components/create/common/addressel.less
@@ -1,17 +1,4 @@
 // @rem:100rem;
-// .yd-cityselect-item{
-//     .yd-cityselect-nav{
-//         a{
-//             font-size:2 
-//         }
-//     }
-
-//     .yd-cityselect-item-box{
-//         a{
-//             height: 5s0/@rem;
-//             span{
-//                 font-size: 20/@rem;
-//             }
-//         }
-//     }
+// .addele{
+//     height: 900/@rem;
 // }
