--- a/src/components/details/records.less
+++ b/src/components/details/records.less
@@ -18,11 +18,11 @@
   top: 0;
 }
 
-.records_wrap_top h3{
+.records_wrap_top div{
   font-size: 36/@rem;
   color: #fff;
   position: absolute;
-  top: 50/@rem;
+  top: 35/@rem;
   left: 50%;
   transform: translateX(-50%);
 }
