--- a/src/components/create/common/addressel.less
+++ b/src/components/create/common/addressel.less
@@ -1,50 +1,89 @@
 @rem:100rem;
 
 
-.yd-cityselect-header{
-    .yd-cityselect-title{
-        height: 70/@rem;
-        line-height: 70/@rem;
-    }
+.selectBox{
+    width: 100%;
     
-    .yd-cityselect-nav{
-
-
-        a{
-            font-size: 30/@rem ;
-            height: 64/@rem;
-            line-height: 64/@rem;
-            text-decoration: none;
-        }
-    
-    }
-}
-
-.yd-cityselect-item{
-    .yd-cityselect-item-box{
-        a{
-            height: 60/@rem;
+    .head{
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        background-color: #ffffff;
+        border-bottom: 1/@rem solid #dddddd;
+        .headback{
+            width: 30/@rem;
+            height: 30/@rem;
+            margin-right: -30/@rem;
+            border-top: 5/@rem solid #1b81d2;
+            border-right: 5/@rem solid #1b81d2;
+            margin-top: 30/@rem;
+            transform:rotateZ(-135deg);
         }
         span{
+            font-size: 32/@rem;
+            color: #1b81d2;
+            line-height: 88/@rem;
+            margin-left: 30/@rem;
+        }
+        h3{
+            font-size: 36/@rem;
+            line-height: 88/@rem;
+            color: #000000;
+            margin-left: 180/@rem;
+        }
+        
+    }
+    .selConentbox{
+        position: fixed;
+        width: 100%;
+        background-color: #ffffff;
+        top: 90/@rem;
+        left: 0;
+        .nowsel{
+            padding-left: 30/@rem;
+            line-height: 60/@rem;
             font-size: 28/@rem;
-            max-height:none;
-            line-height: 30/@rem;
+            background-color: #f5f5f9;
         }
-        .yd-cityselect-item-active:after{
-            font-size: 20/@rem;
+        .selected{
+            display: flex;
+            padding: 20/@rem 0;
+            padding-left: 30/@rem;
+            border-bottom: 1/@rem  solid #f5f5f9;
+            span{
+                width: 100/@rem;
+                line-height: 50/rem;
+                font-size: 28/@rem;
+            }    
 
+            .active{
+                color: red;
+            }
         }
-        .yd-cell-right{
-            input{
-                color:red!important;
-
+        
+    }
+    .elelist{
+        margin-top: 230/@rem;
+        padding-bottom: 100/@rem;
+        width: 100%;
+        li{ 
+            
+            height: 80/@rem;
+            line-height: 80/@rem;
+            letter-spacing: 5/@rem;
+            width: 100%;
+            text-align: left; 
+            text-indent:30/@rem;  
+            font-size: 34/@rem;
+            border-bottom: 1/@rem  solid #f5f5f9;
+            color: black;
+            a{
+                display: block;
+                color: #000000;
             }
         }
     }
-    
-}
-.yd-cityselect {
-    .yd-cityselect-content{
-        padding-top:135/@rem; 
-    }
+
+
 }
