修改地址组件以及配置mapGetter

--- a/src/components/create/common/addressel.less
+++ b/src/components/create/common/addressel.less
@@ -52,11 +52,10 @@
             padding-left: 30/@rem;
             border-bottom: 1/@rem  solid #f5f5f9;
             span{
-                width: 100/@rem;
+                margin-right: 20/@rem;
                 line-height: 50/rem;
                 font-size: 28/@rem;
             }    
-
             .active{
                 color: red;
             }
