--- a/src/components/create/common/addressel.css
+++ b/src/components/create/common/addressel.css
@@ -50,7 +50,7 @@
   border-bottom: 0.01rem solid #f5f5f9;
 }
 .selectBox .selConentbox .selected span {
-  width: 1rem;
+  margin-right: 0.2rem;
   line-height: 50 / rem;
   font-size: 0.28rem;
 }
