--- a/src/assets/createstyle/promptbox.less
+++ b/src/assets/createstyle/promptbox.less
@@ -20,6 +20,7 @@ background: rgba(0, 0, 0, .5);
         border-radius: 15/@rem;
         h3{
             font-size: 34/@rem;
+            height: 40/@rem;
             color: #333333;
             margin-top: 50/@rem;
         }
