--- a/src/components/details/details.less
+++ b/src/components/details/details.less
@@ -305,6 +305,7 @@ label {
   height: 88/@rem;
   line-height: 88/@rem;
   background: #00a0e9;
+  border-radius: 0 0 20/@rem 0;
 }
 
 .details_shadow_code{
