--- a/src/assets/createstyle/orderInfo.less
+++ b/src/assets/createstyle/orderInfo.less
@@ -43,11 +43,18 @@
                 margin-left: 20/@rem;
                 display: flex;
                 input{
-                    width: 454/@rem;
+                    width: 500/@rem;
                     line-height: 89/@rem;
                     font-size: 30/@rem;
                     color: #888888;
                     outline: none;
+                }
+                span{
+                    width: 500/@rem;
+                    line-height: 60/@rem;
+                    font-size: 30/@rem;
+                    color: #888888;
+                    text-align: left;
                 }
                 strong{
                     text-align: left;
