--- a/src/components/create/common/addressel.less
+++ b/src/components/create/common/addressel.less
@@ -66,9 +66,10 @@
         margin-top: 230/@rem;
         padding-bottom: 100/@rem;
         width: 100%;
+        
         li{ 
             
-            height: 80/@rem;
+            // height: 80/@rem;
             line-height: 80/@rem;
             letter-spacing: 5/@rem;
             width: 100%;
@@ -76,11 +77,21 @@
             text-indent:30/@rem;  
             font-size: 34/@rem;
             color: black;
+            background-color: #ffffff;
+            border-bottom: 1/@rem  solid #f5f5f9; 
+            
+            
             a{
                 display: block;
                 color: #000000;
+                text-indent: 0;
+                padding: 0 50/@rem;
             }
+            
         }
+        // li:nth-of-type(odd){
+        //     background-color: #f5f5f9;
+        // }
     }
 
 
