--- a/src/components/details/orders.less
+++ b/src/components/details/orders.less
@@ -77,7 +77,7 @@
 
 .orders_wrap_text {
   width: 330/@rem;
-  margin: 50/@rem auto 0;
+  margin: 50/@rem auto;
   font-size: 28/@rem;
   color: #888;
 }
