--- a/src/components/details/home.less
+++ b/src/components/details/home.less
@@ -24,6 +24,10 @@ a{
   margin-top: 18/@rem;
 }
 
+.home_wrap_item:last-child {
+  margin-bottom: 170rem;
+}
+
 .home_wrap_item .time{
   font-size: 28/@rem;
 }
