--- a/src/components/details/orders.css
+++ b/src/components/details/orders.css
@@ -62,7 +62,7 @@
 }
 .orders_wrap_text {
   width: 3.3rem;
-  margin: 0.5rem auto 0;
+  margin: 0.5rem auto;
   font-size: 0.28rem;
   color: #888;
 }
