--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -199,7 +199,7 @@
 .details_wrap_belongs {
   font-size: 0.28rem;
   color: #888;
-  margin-top: 1rem;
+  margin: 1rem 0;
   text-align: center;
 }
 
