--- a/src/components/details/details.less
+++ b/src/components/details/details.less
@@ -201,7 +201,7 @@
 .details_wrap_belongs {
   font-size: 28/@rem;
   color: #888;
-  margin-top: 100/@rem;
+  margin: 100/@rem 0;
   text-align: center;
 }
 
