--- a/src/components/details/records.css
+++ b/src/components/details/records.css
@@ -93,7 +93,7 @@
 .records_wrap_item .loading {
   font-size: 0.3rem;
   color: #888;
-  margin-top: 0.3rem;
+  margin: 0.3rem 0;
   text-align: center;
 }
 
