--- a/src/components/details/records.less
+++ b/src/components/details/records.less
@@ -95,7 +95,7 @@
 .records_wrap_item .loading {
   font-size: 30/@rem;
   color: #888;
-  margin-top: 30/@rem;
+  margin: 30/@rem 0;
   text-align: center;
 }
 
